# fribidi

./: .gitignore  AUTHORS  README  configure.ac  notes.org
fribidi-vs-unicode/: Makefile.am  SConstruct  algo-n0.c  algo-n0.h  algo_n0.py  bd16-v1.c  bd16-v1.h  bd16.c  bd16.h  bd16.py  test-algo-n0.c  test-bd16-v1.c  test-bd16.c  test-bidi-bracketing.c  test-bracketing.c  test-character.c  test.c  view-chars.py
gen.tab/: Makefile.am  gen-brackets-tab.c  gen-brackets-type-tab.c
lib/: Makefile.am  fribidi-bidi.c  fribidi-bidi.h  fribidi-brackets.c  fribidi-brackets.h  fribidi-deprecated.c  fribidi-deprecated.h  fribidi-mirroring.c  fribidi-mirroring.h  fribidi-run.c  fribidi-types.h  fribidi-unicode.h  fribidi.c  fribidi.h  run.h
test/unicode-conformance/: SConstruct
